white space issue

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -61,7 +61,8 @@ body {
   background-color: #fff;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  min-height: 100%;
+  /* min-height: 100%; */
+  min-height: 88vh;
 }
 
 hr {
@@ -11316,7 +11317,7 @@ header.masthead {
   text-align: center;
   color: #fff;
   background-image: url("../assets/img/ferns.jpg");
-  /* background-repeat: no-repeat; */
+  background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
   background-size: contain;
